--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^3.2.3"
+        "postcss": "^8.4.18",
+        "pug": "^3.0.2",
+        "pug-plain-loader": "^1.1.0",
+        "tailwindcss": "^3.2.3",
+        "vite": "^3.2.3",
+        "vue-pug-plugin": "^2.0.3"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.2.0",
