--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vue-pug-plugin": "^2.0.3"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@vitejs/plugin-vue": "^3.2.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
