--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@vitejs/plugin-vue": "^3.2.0",
+        "gsap": "^3.11.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
     }
